# cli-claude-task-scheduler

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
claude-task-scheduler_cli/: client.py  config.py  filter_map.py  filters.py  main.py
claude-task-scheduler_cli/commands/: auth.py  items.py
claude-task-scheduler_cli/models/: __init__.py  item.py
claude_task_scheduler_cli/: __init__.py  db_client.py  health.py  logger.py  main.py  notifications.py  output.py  scheduler.py  summary.py
claude_task_scheduler_cli/commands/: __init__.py  daemon.py  logs.py  notification_channels.py  runs.py  tasks.py
claude_task_scheduler_cli/models/: __init__.py  base.py  db.py  log.py  notification.py  task.py
tests/: test_run_output_field.py  test_summary.py  test_task_outcome.py  test_task_run_creation.py  test_timeout.py
